--- a/web-p.yaml
+++ b/web-p.yaml
@@ -1,38 +1,38 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: nginx
+  name: nginx-1
   labels:
-    app: nginx
+    app: nginx-1
 spec:
   ports:
   - port: 80
-    name: web
+    name: web-p
   clusterIP: None
   selector:
-    app: nginx
+    app: nginx-1
 ---
 apiVersion: apps/v1
 kind: StatefulSet
 metadata:
-  name: web
+  name: web-p
 spec:
-  serviceName: "nginx"
+  serviceName: "nginx-1"
   replicas: 2
   selector:
     matchLabels:
-      app: nginx
+      app: nginx-1
   template:
     metadata:
       labels:
-        app: nginx
+        app: nginx-1
     spec:
       containers:
-      - name: nginx
-        image: "us-docker.pkg.dev/google-samples/containers/gke/hello-app:2.0"
+      - name: nginx-1
+        image: k8s.gcr.io/nginx-slim:0.8
         ports:
         - containerPort: 80
-          name: web
+          name: web-p
         volumeMounts:
         - name: www
           mountPath: /usr/share/nginx/html
