--- a/web.yaml
+++ b/web.yaml
@@ -35,7 +35,7 @@ spec:
           name: web
         volumeMounts:
         - name: www
-          mountPath: /usr/share/nginx/html
+          mountPath: /usr/share/nginx/html #"/var/www/html"
   volumeClaimTemplates:
   - metadata:
       name: www
