--- a/my-pvc-s.yaml
+++ b/my-pvc-s.yaml
@@ -18,7 +18,7 @@ metadata:
 spec:
   containers:
     - name : myfrontend 
-      image : nginx
+      image : nginx:latest
       volumeMounts:
       - mountPath: "/var/www/html"
         name : mypd
